// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail renders 1`] = `
<svg
  aria-label="icon-email"
  role="img"
  viewBox="b4de9ef077a0a2ad684a1d8e6916ebc4"
  width={20}
>
  <title>
    IconEmail
  </title>
  <g
    fill="#1D1D1B"
    fillRule="nonzero"
  >
    <path
      d="1d7aae45398f94fa23694b6080b89032"
    />
  </g>
</svg>
`;

exports[`2. iconfacebook renders 1`] = `
<svg
  aria-label="icon-facebook"
  role="img"
  viewBox="bd9a71c8a3142edf7cab6a62a2277378"
  width={20}
>
  <title>
    IconFacebook
  </title>
  <g
    fill="#1D1D1B"
    fillRule="nonzero"
  >
    <path
      d="ff2ae287381fd0583b3a4df9bc45c5be"
    />
  </g>
</svg>
`;

exports[`3. iconforwardarrow renders 1`] = `
<svg
  aria-label="icon-forward-arrow"
  height={12}
  viewBox="5c14eb9241a8569e247b0186d9e66a8a"
  width={7}
>
  <g
    fill="#006699"
  >
    <path
      d="cf23b8f47ac97eeec14ee4c65e472078"
    />
  </g>
</svg>
`;

exports[`4. iconstar renders 1`] = `
<svg
  aria-label="icon-save-star"
  role="img"
  viewBox="951cf65ef61fef616e498a37f3f5a9b1"
  width={20}
>
  <title>
    IconStar
  </title>
  <path
    d="20db890d0ec5651ed550568cd37b5875"
    fill="#006699"
  />
</svg>
`;

exports[`5. iconcopylink renders 1`] = `
<svg
  aria-label="icon-copy-link"
  height={15}
  role="img"
  viewBox="7798bdae936d01418f5704cad29092ad"
  width={20}
>
  <title>
    IconCopyLink
  </title>
  <path
    d="9caedb2f218a37cd4660f2ab42e9b771"
    fill="#696969"
  />
</svg>
`;

exports[`6. iconsavebookmark renders 1`] = `
<svg
  aria-label="icon-save-bookmark"
  height={16}
  role="img"
  viewBox="192c9a888d6def500471679101ad9f5c"
  width={20}
>
  <title>
    IconSaveBookmark
  </title>
  <path
    d="25ee7ee33953337725fa0c3787ab3241"
    fill="#696969"
  />
</svg>
`;

exports[`7. icontwitter renders 1`] = `
<svg
  aria-label="icon-twitter"
  role="img"
  viewBox="f0ca3b77f62fa9136cdfd9a3f847d07b"
  width={20}
>
  <title>
    IconTwitter
  </title>
  <path
    d="0407fd6a3edc199eb6063d0ebd2c66ad"
    fill="#006699"
  />
</svg>
`;

exports[`8. iconvideo renders 1`] = `
<svg
  aria-label="icon-video"
  role="img"
  viewBox="32c562c1b3cee8479f67d0cbd8edef4d"
  width={20}
>
  <title>
    IconVideo
  </title>
  <rect
    fill="#1D1D1B"
    height="40"
    width="50"
    x="0"
    y="0"
  />
  <polygon
    fill="#1D1D1B"
    points="5a4b8b2ca01315005e925a083a2b7521"
  />
</svg>
`;

exports[`9. iconvideo360player renders 1`] = `
<svg
  aria-label="icon-video-360-player"
  role="img"
  viewBox="544726bb051c5bacf72288529e947083"
  width={20}
>
  <title>
    IconVideo360Player
  </title>
  <path
    d="92444cc628d352fe07031cfb7b426ccf"
    fill="#006699"
  />
</svg>
`;

exports[`10. thestlogo renders 1`] = `
<svg
  aria-label="logo-the-sunday-times"
  role="img"
  viewBox="432b2b997b72ed04860614d58bfe21fa"
  width={20}
>
  <title>
    TheSTLogo
  </title>
  <path
    d="0f4e958f2b4ff0e7612914c8ca56d8f6"
    fill="#FFFFFF"
  />
</svg>
`;

exports[`11. thetimeslogo renders 1`] = `
<svg
  aria-label="logo-the-times"
  role="img"
  viewBox="064d9dc888226a281482b4aa9646de05"
  width={20}
>
  <title>
    TheTimesLogo
  </title>
  <path
    d="9d34e249e9f10c48ae181fd7ef01d8e7"
    fill="#FFFFFF"
  />
</svg>
`;

exports[`12. closeicon renders 1`] = `
<svg
  aria-label="icon-close"
  height={28}
  role="img"
  viewBox="a20267b134584c37a6dc39235d4a5519"
  width={20}
>
  <title>
    Close Icon
  </title>
  <path
    d="e47f4fab4bd751d2d3ea1eb7a66c492a"
    fill="white"
    stroke="white"
  />
</svg>
`;

exports[`13. iconforwardchevron renders 1`] = `
<svg
  aria-label="icon-forward-chevron"
  viewBox="5c14eb9241a8569e247b0186d9e66a8a"
  width={20}
>
  <g
    fill="#006699"
  >
    <path
      d="cf23b8f47ac97eeec14ee4c65e472078"
    />
  </g>
</svg>
`;
